# hs-tax

./: .gitignore  .travis.yml  tax.cabal
.github/workflows/: haskell-ci.yml
src/Data/: Tax.hs
