name:                tax
version:             0.1.0.0
synopsis:            Types and combinators for taxes
-- description:
homepage:            https://github.com/frasertweedale/hs-tax
license:             AGPL-3
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2018 Fraser Tweedale
category:            Finance
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    Data.Tax
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >= 4.8
    , dollaridoos >= 0.1
    , semigroups >= 0.16
  hs-source-dirs:      src
  default-language:    Haskell2010
