name:                tax
version:             0.2.0.0
synopsis:            Types and combinators for taxes
description:
  This library provides combinators for constructing taxes.  It is based on
  the <https://hackage.haskell.org/package/dollaridoos dollaridoos> library.
license:             AGPL-3
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2018 Fraser Tweedale
category:            Finance
build-type:          Simple
cabal-version:       >=1.10
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.1

homepage:            https://github.com/frasertweedale/hs-tax
bug-reports:         https://github.com/frasertweedale/hs-tax/issues
source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-tax.git

library
  exposed-modules:
    Data.Tax
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >= 4.8 && < 5
    , dollaridoos >= 0.1
    , profunctors >= 5.1
    , semigroups >= 0.16
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall
