cabal-version:       2.2
name:                tax
version:             0.2.0.0
synopsis:            Types and combinators for taxes
description:
  This library provides combinators for constructing taxes.  It is based on
  the <https://hackage.haskell.org/package/dollaridoos dollaridoos> library.
license:             AGPL-3.0-or-later
license-file:        LICENSE
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2018 Fraser Tweedale
category:            Finance
build-type:          Simple
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.7 || ==9.6.3 || ==9.8.1

homepage:            https://github.com/frasertweedale/hs-tax
bug-reports:         https://github.com/frasertweedale/hs-tax/issues
source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-tax.git

common common
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Werror=missing-methods
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wnoncanonical-monad-instances
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages
    -fhide-source-paths
  if impl(ghc >= 9.0)
    ghc-options:
      -Winvalid-haddock
      -Werror=unicode-bidirectional-format-characters
  if impl(ghc >= 9.2)
    ghc-options:
      -Wimplicit-lift
      -Woperator-whitespace
      -Wredundant-bang-patterns
  if impl(ghc >= 9.4)
    ghc-options:
      -Wredundant-strictness-flags
  build-depends:
    base >= 4.14 && < 5

library
  import: common
  exposed-modules:
    Data.Tax
  -- other-modules:
  -- other-extensions:
  build-depends:
    , dollaridoos >= 0.1
    , profunctors >= 5.1
    , semigroups >= 0.16
  hs-source-dirs:      src
